test/language/spec/stdlib/invalid/optional_too_many_args.topo
// TEST: optional<i64, f64> with too many type parameters
// EXPECT-ERROR: stdlib type 'optional' takes 1 type parameter

namespace bad {
  public:
    optional<i64, f64> badReturn();
}
